Description des modifications

--- a/results/log.html
+++ b/results/log.html
@@ -2081,31 +2081,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,345],[[4,5,6,0,[],[0,52,279],[],[[7,0,0,[],[0,331,0,8],[[0,9,0,0,0,0,0,0,[0,331,0],[[331,5,8]]]]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17765],[[4,5,6,0,[],[1,54,17708],[],[[7,0,0,[],[1,432,17326],[[0,8,0,0,0,0,0,0,[1,432,17326],[[0,9,10,0,11,12,0,0,[1,432,3717],[[432,2,13],[1325,3,15]]],[0,16,10,0,17,0,0,0,[1,4149,58],[]],[0,18,10,0,19,20,0,0,[1,4210,10673],[[4211,2,21]]],[0,22,10,0,23,0,0,0,[1,14896,2862],[]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\DEVELOPPEMENT\\kolakash_01\\tests","*../tests","*Main","*C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot","*../tests/main.robot","*Main Test","*No keyword with name 'First Keyword' found.","*First Keyword","*Error in file 'C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot' on line 5: Setting variable 'First Keyword' failed: Invalid variable name 'First Keyword'.","*Error in file 'C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot' on line 6: Setting variable '' failed: Invalid variable name ''.","*Error in file 'C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot' on line 8: Setting variable '' failed: Invalid variable name ''.","*Error in file 'C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot' on line 10: Setting variable '' failed: Invalid variable name ''.","*Error in file 'C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot' on line 12: Setting variable '' failed: Invalid variable name ''."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\DEVELOPPEMENT\\kolakash_01\\tests","*../tests","*Main","*C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot","*../tests/main.robot","*Main Test","*First Keyword","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*about:blank    Edge","*Opening browser 'Edge' to base url 'about:blank'.","*s1-s1-t1-k1-k1","eNpdzzsLwkAQBOC/MqWKHCa+tRIRbAQLS5skt5qF5E7u1kf+vRuEoBbbDd/MnkpCHcleyQZ+UIBeZO/QS9K5GZl0Nk1MMpr2YUmoELJgh+PmtEcm2K7OObvzN2DopSJfS4HzgpxQ+PqWCecV4clSQrSyww5cBB/9RXYqfJcv2vL5eGkmaX+N4h4COama4e/anxw4IpDW1eSs2hcf/vw2PhgierC06cw+WDmI10WVbvqM+9jdn84qK6F5A/0nZGk=","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.google.cm\">https://www.google.cm\x3c/a>","*Opening url '<a href=\"https://www.google.cm\">https://www.google.cm\x3c/a>'","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s1","label":"Tests.Main","name":"Main","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1","label":"Tests.Main","name":"Main","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[52,4,10],[53,4,11],[53,4,12],[53,4,13],[54,4,14]];
+window.output["errors"] = [[1325,3,15,14]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1724867588897;
+window.output["baseMillis"] = 1724876726583;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 368;
+window.output["generated"] = 17786;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
