--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,345],[[4,5,6,0,[],[0,52,279],[],[[7,0,0,[],[0,331,0,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17765],[[4,5,6,0,[],[1,54,17708],[],[[7,0,0,[],[1,432,17326],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\DEVELOPPEMENT\\kolakash_01\\tests","*../tests","*Main","*C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot","*../tests/main.robot","*Main Test","*No keyword with name 'First Keyword' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\DEVELOPPEMENT\\kolakash_01\\tests","*../tests","*Main","*C:\\DEVELOPPEMENT\\kolakash_01\\tests\\main.robot","*../tests/main.robot","*Main Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"id":"s1-s1","label":"Tests.Main","name":"Main","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1","label":"Tests.Main","name":"Main","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1724867588897;
+window.output["baseMillis"] = 1724876726583;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 368;
+window.output["generated"] = 17786;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
